--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
-@import url('components/navbar.css');
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap");
+@import url("/assets/css/components/navbar.css");
+@import url("/assets/css/components/main.css");
 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: 'Oswald', sans-serif;
-    overflow: hidden;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Oswald", sans-serif;
+  /* overflow: hidden; */
 }
 
-main {
-    background: url(../images/bg.png) no-repeat;
-    background-size: cover;
-    height: 92vh;
-  }
-
+body {
+  background: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 0, 0, 1) 99%,
+    rgba(0, 228, 255, 1) 100%
+  );
+  color: #fff;
+}
